# wbase27

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  presetmanager.cpp  presetmanager.h  standbymanager.cpp  standbymanager.h
